# openlacrosse

./: CMakeLists.txt  README.md  auxiliary.cpp  auxiliary.h  main.cpp
CMakeModules/: FindPCHSupport.cmake
res/: ws8610.dump
src/: auxiliary.cpp  auxiliary.h  auxiliary.hpp  boost_includes.hpp  global.hpp  main.cpp  serialinterface.cpp  serialinterface.h  serialinterface.hpp  station.cpp  station.h  station.hpp  std_includes.hpp  ws8610.cpp  ws8610.h  ws8610.hpp
src/pch/: boost.hpp  std.hpp
